# aegis

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test_output.txt  test_output_2.txt
.github/workflows/: publish.yml
.jules/: bolt.md
aegis-core/src/: lib.rs
aegis-core/src/ml/: autograd.rs  linalg.rs  mod.rs  neural.rs  tensor.rs
aegis-core/tests/: test_autograd.rs
aegis-kernel/: Cargo.toml
aegis-kernel/src/: lib.rs  main.rs
aegis-kernel/src/boot/: bios.rs  topology.rs
aegis-lang/src/: ast.rs  interpreter.rs
crates/aether-core/src/: manifold.rs  memory.rs  topology.rs
crates/aether-core/src/ml/: linalg.rs
crates/aether-kernel/src/: main.rs
crates/aether-kernel/src/boot/: bios.rs  topology.rs
crates/aether-lang/: Cargo.toml
crates/aether-lang/src/: interpreter.rs  vm.rs
docs/: DL_ROADMAP.md
examples/: benchmark_compare.py
