[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "aether-lang"
version = "0.1.0"
description = "Current World's Fastest Agentic AI Language"
authors = [
    { name = "AETHER Research Team", email = "teerths57@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]

[tool.maturin]
# Use the executable name 'aether'
python-source = "bindings/python"
module-name = "aether_lang"


manifest-path = "crates/aether-lang/Cargo.toml"
package = "aether-lang"
features = ["python"]
